--- a/shoprest/src/main/resources/templates/accts1.html
+++ b/shoprest/src/main/resources/templates/accts1.html
@@ -19,17 +19,17 @@
                         <table class="table table-striped table-responsive-md">
                             <thead>
                                 <tr>
-                                    <th>Full Name</th>
-                                    <th>Email Address</th>
-                                    <th>Full Name</th>
-                                    <th>Email Address</th>
-                                    <th>Full Name</th>
-                                    <th>Email Address</th>
-                                    <th>Full Name</th>
-                                    <th>Email Address</th>
-                                    <th>Full Name</th>
-                                    <th>Email Address</th>
-                                    <th>Full Name</th>
+                                    <th>ID</th>
+                                    <th>Name</th>
+                                    <th>Acct Number</th>
+                                    <th>Address1</th>
+                                    <th>Addr2</th>
+                                    <th>Addr3</th>
+                                    <th>City</th>
+                                    <th>State</th>
+                                    <th>Zipcode</th>
+                                    <th>Mobile</th>
+                                    <th>Mobile2</th>
                                     <th>Email Address</th>
 
                                     <th>Edit Here</th>
@@ -50,13 +50,13 @@
                                     <td th:text="${account.mobile1}"></td>
                                     <td th:text="${account.mobile2}"></td>
                                     <td th:text="${account.email}"></td>
-                                    <td><a th:href="@{/edit/{id}(id=${account.id})}" class="btn btn-primary"><i class="fas fa-user-edit ml-2"></i></a></td>
-                                    <td><a th:href="@{/delete/{id}(id=${account.id})}" class="btn btn-primary"><i class="fas fa-user-times ml-2"></i></a></td>
+                                    <td><a th:href="@{/acct/edit/{id}(id=${account.id})}" class="btn btn-primary"><i class="fas fa-user-edit ml-2"></i></a></td>
+                                    <td><a th:href="@{/acct/delete/{id}(id=${account.id})}" class="btn btn-primary"><i class="fas fa-user-times ml-2"></i></a></td>
                                 </tr>
                             </tbody>
                         </table>
                     </div>      
-                    <p class="my-5"><a href="/signup" class="btn btn-primary"><i class="fas fa-user-plus ml-2"></i></a></p>
+                    <p class="my-5"><a href="/acct/signup" class="btn btn-primary"><i class="fas fa-user-plus ml-2"></i></a></p>
                 </div>
             </div>
         </div>
