--- a/shoprest/src/main/resources/templates/update-acct.html
+++ b/shoprest/src/main/resources/templates/update-acct.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
-        <title>Add Account</title>
+        <title>Update stud</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz" crossorigin="anonymous">
@@ -11,10 +11,10 @@
     </head>
     <body>
         <div class="container my-5">
-            <h2 class="mb-5">Add New Account</h2>
+            <h2 class="mb-5">Update Account</h2>
             <div class="row">
-                <div class="col-md-12">
-                    <form action="#" th:action="@{/addacct}" th:object="${account}" method="post">
+                <div class="col-md-6">
+                    <form action="#" th:action="@{/editacct}" th:object="${account}" method="post">
                         <div class="row">
                             <div class="form-group col-md-4">
                                 <label for="Id" class="col-form-label">Id</label>
@@ -91,10 +91,11 @@
                                 <input type="text" th:field="*{email}" class="form-control" id="email" placeholder="Email">
                                 <span th:if="${#fields.hasErrors('email')}" th:errors="*{email}" class="text-danger"></span>
                             </div>
+                            
                         </div>
                         <div class="row">
-                            <div class="col-md-4 mt-5">
-                                <input type="submit" class="btn btn-primary" value="Add New Account">
+                            <div class="col-md-6 mt-5">
+                                <input type="submit" class="btn btn-primary" value="Update Account">
                             </div>
                         </div>    
                     </form>
